apps/argocd-managed/sample-fastapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-fastapi
spec:
  selector:
    app: sample-fastapi
  ports:
  - port: 80
    targetPort: 80
