apps/argocd-managed/sample-fastapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-fastapi
spec:
  ingressClassName: traefik
  rules:
  - host: fastapi.cnlab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sample-fastapi
            port:
              number: 80
